# Vocastant

./: .agentignore  .dockerignore  .gitignore  Dockerfile  README.md  agent.py  agent_complex.py  aws-deploy.sh  deploy-full-stack.sh  deployment.env.backup  env.example  livekit.toml  package-lock.json  package.json  pyproject.toml  redeploy-backend.sh  requirements.txt  test-complete-flow.sh  test-fixed-flow.sh  test-room-system.sh  update-task-definition-v2.json  verify-deployment.sh
backend/: .dockerignore  Dockerfile  README.md  database.js  database.sql  main.js  package-lock.json  package.json  s3.js  server.js
backend/middleware/: roomMiddleware.js
backend/routes/: documents.js  rooms.js
backend/services/: livekitService.js
backend/utils/: textExtractor.js
frontend/: README.md  env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ChatPanel.tsx  DocumentUpload.tsx  DocumentViewer.tsx  HomePage.tsx  LiveChat.tsx  LiveKitProvider.tsx  ModernDocumentUpload.tsx  ModernDocumentViewer.tsx  ModernVoiceConnection.tsx  RoomPage.tsx  StartPage.tsx  TranscriptionDisplay.tsx  TranscriptionHandler.tsx  VoiceConnection.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/services/: api.ts  livekit.ts  roomService.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
tools/: __init__.py  document_tools.py  document_tools_simple.py  text_utils.py
